add temporary resume

--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -25,7 +25,6 @@
           <br>
           <br>
           I'm always looking for new things to learn.
-          <br>
           My curiosity hasn't killed me yet.
           <br>
           <br>
@@ -44,7 +43,7 @@
       </div>
       <!-- Row Content -->
       <div class="w3-twothird w3-container">
-        jonathantow1 @ gmail.com
+        <p>jonathantow1 @ gmail.com</p>
       </div>
     </div>
     <!-- End of Email Row -->
@@ -58,7 +57,7 @@
       <!-- Row Content -->
       <div class="w3-twothird w3-container">
         <p>
-          <a href="data/resume/cv.pdf">
+          <a href="data/resume.pdf">
             Resume
           </a>
         </p>
