update bottom padding of about

--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,4 +1,6 @@
 <section class="w3-container w3-margin-bottom" id="about">
+
+
   <!-- Section Title Row -->
   <div class="w3-container section-header">
     <h2 class="section-h2">
@@ -6,8 +8,12 @@
     </h2>
   </div>
   <hr>
+
+
   <!-- Content -->
   <div class="w3-container">
+
+
     <!-- Email Row -->
     <div class="w3-row">
       <!-- Row Title -->
@@ -30,11 +36,14 @@
           <br>
           Friend me on chess.com (JonWot)
         </p>
-
       </div>
     </div>
     <!-- End of Email Row -->
+
+
     <hr>
+
+
     <!-- Email Row -->
     <div class="w3-row">
       <!-- Row Title -->
@@ -47,9 +56,13 @@
       </div>
     </div>
     <!-- End of Email Row -->
+
+
     <hr>
+
+
     <!-- Resume Row -->
-    <div class="w3-row">
+    <div class="w3-row mb-4">
       <!-- Row Title -->
       <div class="w3-third w3-container pb-2">
         <em>Resume</em>
@@ -64,6 +77,8 @@
       </div>
     </div>
     <!-- End of Resume Row -->
+
+
   </div>
   <!-- End of Content -->
 </section>
