--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -3,7 +3,7 @@
   <div class="w3-container w3-text-grey w3-margin-bottom">
     <div id="footer" class="container-fluid">
       New York, New York
-      <br> ©2018 Jonathan Tow
+      <br> ©2018 Jon Tow
     </div>
   </div>
   <!-- End Footer area -->
