--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -31,7 +31,7 @@
           <br>
           <br>
           I'm always looking for new things to learn.
-          My curiosity hasn't killed me yet.
+          My curiosity hasn't hurt me yet.
           <br>
           <br>
           Friend me on chess.com (JonWot)
