--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -26,8 +26,9 @@
           <b>CS @ Stony Brook University</b>
           <br>
           <br>
-          I enjoy coding, tinkering with machine learning models,
-          and pretending to be a musician.
+          I enjoy <span class="underline">coding</span>, tinkering with
+          <span class="underline">machine learning</span> models,
+          and pretending to be a <span class="underline">music</span>ian.
           <br>
           <br>
           I'm always looking for new things to learn.
