--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,10 +1,10 @@
-<section class="w3-container w3-margin-bottom section" id="notes">
+<section class="w3-container w3-margin-bottom" id="notes">
   <!-- Section Title Row -->
   <div class="w3-container section-header">
     <h2 class="section-h2">
       <p>Notes</p>
     </h2>
-    <a href="#nav" class="top-link"> Back to top </a>    
+    <a href="#nav" class="top-link"> Back to top </a>
   </div>
   <hr>
   <!-- Content -->
