--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,4 +1,4 @@
-<section class="w3-container w3-margin-bottom section" id="project">
+<section class="w3-container w3-margin-bottom" id="project">
   <!-- Section Title Row -->
   <div class="w3-container section-header">
     <h2 class="section-h2">
