--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ section {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  padding-left: 1em;
+  padding-left: 1.8em;
 }
 
 .section-h2 {
@@ -185,6 +185,10 @@ section {
 
 .demo {
     cursor:pointer
+}
+
+.underline {
+  box-shadow: inset 0 -3px 0 white, inset 0 -5.5px 0 var(--main-color);
 }
 
 blockquote {
