--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,8 @@ section {
 
 .underline {
   box-shadow: inset 0 -3px 0 white, inset 0 -5.5px 0 var(--main-color);
+  -webkit-box-shadow: inset 0 -3px 0 white, inset 0 -5.5px 0 var(--main-color);
+  -moz-box-shadow: inset 0 -3px 0 white, inset 0 -5.5px 0 var(--main-color);
 }
 
 blockquote {
