--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -26,9 +26,9 @@
           <b>CS @ Stony Brook University</b>
           <br>
           <br>
-          I enjoy <span class="underline">coding</span>, tinkering with
-          <span class="underline">machine learning</span> models,
-          and pretending to be a <span class="underline">music</span>ian.
+          I enjoy <span class="underline">codin</span>g, tinkering with
+          <span class="underline">machine learnin</span>g models,
+          and pretending to be a <span class="underline">musician</span>.
           <br>
           <br>
           I'm always looking for new things to learn.
