--- a/css/main.css
+++ b/css/main.css
@@ -188,9 +188,10 @@ section {
 }
 
 .underline {
-  box-shadow: inset 0 -3px 0 white, inset 0 -5.5px 0 var(--main-color);
-  -webkit-box-shadow: inset 0 -3px 0 white, inset 0 -5.5px 0 var(--main-color);
-  -moz-box-shadow: inset 0 -3px 0 white, inset 0 -5.5px 0 var(--main-color);
+    background-image: linear-gradient(var(--main-color) 0%, var(--main-color) 100%);
+    background-repeat: repeat-x;
+    background-position: 0 1.1em;
+    background-size: 1px 3px;
 }
 
 blockquote {
