update project section

--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -10,35 +10,33 @@
   <!-- Content -->
   <div class="w3-container">
     <!-- Note Projects Row -->
-    <div class="w3-row">
+    <div class="project-row row">
       <!-- Column Content -->
-      <div class="w3-container w3-twothird">
+      <div class="project-item col-sm">
         <h4>
           <a href="projects/impossible-tic-tac-toe/index.html">
             Impossible Tic-Tac-Toe
           </a>
         </h4>
-        <a href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>.
-        <!-- <ol class="entry-previews"> -->
-        <!--   {% for project in site.projects %} -->
-        <!--   {% if project.level == 0 %} -->
-        <!--   <li> -->
-        <!--     <p class="post-preview"> -->
-        <!--       <a href="{{ project.url }}"> -->
-        <!-- 	{{ project.title }} -->
-        <!-- 	<br> -->
-        <!--       </a> -->
-
-        <!--       {{project.description}} -->
-
-        <!--       <a href="{{ project.url }}"> -->
-        <!-- 	(read more) -->
-        <!--       </a> -->
-        <!--     </p> -->
-        <!--   </li> -->
-        <!--   {% endif %} -->
-        <!--   {% endfor %} -->
-        <!-- </ol> -->
+        <p>
+          A minimax implementation for deciding the best moves in a tic-tac-toe game.
+          <br/>
+          <a href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>.
+        </p>        
+      </div>
+      <!-- Column Content -->
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/maze-solver/index.html">
+            Maze Solver
+          </a>
+        </h4>
+        <p>
+          A minimax implementation for deciding the best moves in a tic-tac-toe game.
+          <br/>
+          <a href="https://github.com/jon-tow/maze-solver">github</a>.
+        </p>
+        
       </div>
       <!-- End of Note Projects Row -->
     </div>
