--- a/css/main.css
+++ b/css/main.css
@@ -201,6 +201,14 @@ blockquote {
 }
 /*-------------*/
 
+/* Project Styling */
+.project-row {
+  padding-left: .9em;
+}
+.project-item {
+  margin-top: .5em;
+}
+/*------------*/
 
 /* Footer Styling */
 footer {
