--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -32,8 +32,7 @@
           </a>
         </h4>
         <p>
-          A minimax implementation for deciding the best moves in a tic-tac-toe game.
-          <br/>
+          A visualization of the basic uniformed search algorithms, depth-first and breadth-first.          <br/>
           <a href="https://github.com/jon-tow/maze-solver">github</a>.
         </p>
         
