fix project issues

--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -34,10 +34,13 @@
         <p>
           A visualization of the basic uniformed search algorithms, depth-first and breadth-first.          <br/>
           <a href="https://github.com/jon-tow/maze-solver">github</a>.
-        </p>
-        
+        </p>        
       </div>
-      <!-- End of Note Projects Row -->
+      <!-- End of Projects Row -->
+
+
+      
+
     </div>
   </div>
   <!-- End of Content -->
