--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -14,7 +14,7 @@
   <div class="w3-container">
 
 
-    <!-- Email Row -->
+    <!-- Bio Row -->
     <div class="w3-row">
       <!-- Row Title -->
       <div class="w3-third w3-container pb-2">
@@ -38,7 +38,7 @@
         </p>
       </div>
     </div>
-    <!-- End of Email Row -->
+    <!-- End of Bio Row -->
 
 
     <hr>
