update projects section

--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -17,7 +17,7 @@
     <!-- Bio Row -->
     <div class="w3-row">
       <!-- Row Title -->
-      <div class="w3-third w3-container pb-2">
+      <div class="w3-third content-header pb-2">
       </div>
       <!-- Row Content -->
       <div class="w3-twothird w3-container">
@@ -47,7 +47,7 @@
     <!-- Email Row -->
     <div class="w3-row">
       <!-- Row Title -->
-      <div class="w3-third w3-container pb-2">
+      <div class="w3-third content-header pb-2">
         <em>Email</em>
       </div>
       <!-- Row Content -->
@@ -64,7 +64,7 @@
     <!-- Resume Row -->
     <div class="w3-row mb-4">
       <!-- Row Title -->
-      <div class="w3-third w3-container pb-2">
+      <div class="w3-third content-header pb-2">
         <em>Resume</em>
       </div>
       <!-- Row Content -->
