--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,4 +1,6 @@
 <section class="w3-container w3-margin-bottom" id="project">
+
+
   <!-- Section Title Row -->
   <div class="w3-container section-header">
     <h2 class="section-h2">
@@ -6,9 +8,20 @@
     </h2>
     <a href="#nav" class="top-link"> Back to top </a>
   </div>
+
+
   <hr>
+
+
   <!-- Content -->
   <div class="w3-container">
+
+    <!-- Playground -->
+    <div class="content-header">
+      <h4>Playground</h4>
+    </div>
+
+
     <!-- Note Projects Row -->
     <div class="project-row row">
       <!-- Column Content -->
@@ -20,9 +33,9 @@
         </h4>
         <p>
           A minimax implementation for deciding the best moves in a tic-tac-toe game.
-          <br/>
+          <br />
           <a href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>.
-        </p>        
+        </p>
       </div>
       <!-- Column Content -->
       <div class="project-item col-sm">
@@ -32,16 +45,38 @@
           </a>
         </h4>
         <p>
-          A visualization of the basic uniformed search algorithms, depth-first and breadth-first.          <br/>
+          A visualization of the basic uniformed search algorithms, depth-first and breadth-first. <br />
           <a href="https://github.com/jon-tow/maze-solver">github</a>.
-        </p>        
+        </p>
       </div>
       <!-- End of Projects Row -->
-
-
-      
-
+    </div>
+    <!-- Note Projects Row -->
+    <div class="project-row row">
+      <!-- Column Content -->
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/sudoku-solver/index.html">
+            Sudoku Solver
+          </a>
+        </h4>
+        <p>
+          A sudoku solver implemented with backtracking.
+          <br />
+          <a href="https://github.com/jon-tow/sudoku-solver">github</a>.
+        </p>
+      </div>
+      <!-- Column Content -->
+      <div class="project-item col-sm">
+        <h4>
+        </h4>
+        <p>
+        </p>
+      </div>
+      <!-- End of Projects Row -->
     </div>
   </div>
   <!-- End of Content -->
+
+
 </section>
