--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -18,6 +18,7 @@
     <div class="w3-row">
       <!-- Row Title -->
       <div class="w3-third content-header pb-2">
+          <em>Bio</em>
       </div>
       <!-- Row Content -->
       <div class="w3-twothird w3-container">
