--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -45,7 +45,7 @@
           </a>
         </h4>
         <p>
-          A visualization of the basic uniformed search algorithms, depth-first and breadth-first. <br />
+          A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
           <a href="https://github.com/jon-tow/maze-solver">github</a>.
         </p>
       </div>
