--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -18,9 +18,10 @@
     <!-- Notes Row -->
     <div class="w3-row">
       <!-- Row Content -->
-      <div class="w3-col w3-container" style="padding-left:2em; width:100%">
-        <ol class="entry-previews">
-          <!-- Limit the number of post here to 5 -->
+      <div class="w3-col w3-container" style="width:100%">
+        Under construction. Updates on the way.
+        <!-- Limit the number of post here to 5 
+        <ol class="entry-previews">          
           {% for post in site.posts limit:5 %}
           <li>
             <p class="post-preview">
@@ -36,6 +37,7 @@
           </li>
           {% endfor %}
         </ol>
+        -->
       </div>
     </div>    
   </div>
