--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,27 +1,24 @@
-<section class="w3-container w3-margin-bottom" id="project">
-
+<section class="w3-margin-bottom" id="project">
+    
 
   <!-- Section Title Row -->
-  <div class="w3-container section-header">
+  <div class="pl-5 section-header">
     <h2 class="section-h2">
       <p>Projects</p>
     </h2>
     <a href="#nav" class="top-link"> Back to top </a>
   </div>
-
-
-  <hr>
-
-
+  
+    
   <!-- Content -->
+  <div class="pl-3 pt-4">
   <div class="w3-container">
+
 
     <!-- Playground -->
     <div class="content-header">
       <h4>Playground</h4>
     </div>
-
-
     <!-- Note Projects Row -->
     <div class="project-row row">
       <!-- Column Content -->
@@ -77,6 +74,6 @@
     </div>
   </div>
   <!-- End of Content -->
-
+<div>
 
 </section>
