--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,85 +1,82 @@
-<section class="w3-container w3-margin-bottom" id="about">
+<section class="w3-margin-bottom" id="about">
 
 
   <!-- Section Title Row -->
-  <div class="w3-container section-header">
+  <div class="pl-5 section-header">
     <h2 class="section-h2">
       <p>About</p>
     </h2>
   </div>
-  <hr>
 
 
   <!-- Content -->
-  <div class="w3-container">
-
-
-    <!-- Bio Row -->
-    <div class="w3-row">
-      <!-- Row Title -->
-      <div class="w3-third content-header pb-2">
+  <div class="pl-3 pt-4">
+    <div class="w3-container">
+      <!-- Bio Row -->
+      <div class="w3-row">
+        <!-- Row Title -->
+        <div class="w3-third content-header pb-2">
           <em>Bio</em>
+        </div>
+        <!-- Row Content -->
+        <div class="w3-twothird w3-container">
+          <p>
+            <b>CS @ Stony Brook University</b>
+            <br>
+            <br>
+            I enjoy <span class="underline">codin</span>g, tinkering with
+            <span class="underline">machine learnin</span>g models,
+            and pretending to be a <span class="underline">musician</span>.
+            <br>
+            <br>
+            I'm always looking for new things to learn.
+            My curiosity hasn't hurt me yet.
+            <br>
+            <br>
+            Friend me on chess.com (JonWot)
+          </p>
+        </div>
       </div>
-      <!-- Row Content -->
-      <div class="w3-twothird w3-container">
-        <p>
-          <b>CS @ Stony Brook University</b>
-          <br>
-          <br>
-          I enjoy <span class="underline">codin</span>g, tinkering with
-          <span class="underline">machine learnin</span>g models,
-          and pretending to be a <span class="underline">musician</span>.
-          <br>
-          <br>
-          I'm always looking for new things to learn.
-          My curiosity hasn't hurt me yet.
-          <br>
-          <br>
-          Friend me on chess.com (JonWot)
-        </p>
+      <!-- End of Bio Row -->
+
+
+      <hr>
+
+
+      <!-- Email Row -->
+      <div class="w3-row">
+        <!-- Row Title -->
+        <div class="w3-third content-header">
+          <em>Email</em>
+        </div>
+        <!-- Row Content -->
+        <div class="w3-twothird w3-container">
+          <p>jonathantow1 @ gmail.com</p>
+        </div>
       </div>
+      <!-- End of Email Row -->
+
+
+      <hr>
+
+
+      <!-- Resume Row -->
+      <div class="w3-row mb-4">
+        <!-- Row Title -->
+        <div class="w3-third content-header">
+          <em>Resume</em>
+        </div>
+        <!-- Row Content -->
+        <div class="w3-twothird w3-container">
+          <p>
+            <a href="data/resume.pdf">
+              Resume
+            </a>
+          </p>
+        </div>
+      </div>
+      <!-- End of Resume Row -->
     </div>
-    <!-- End of Bio Row -->
-
-
-    <hr>
-
-
-    <!-- Email Row -->
-    <div class="w3-row">
-      <!-- Row Title -->
-      <div class="w3-third content-header pb-2">
-        <em>Email</em>
-      </div>
-      <!-- Row Content -->
-      <div class="w3-twothird w3-container">
-        <p>jonathantow1 @ gmail.com</p>
-      </div>
-    </div>
-    <!-- End of Email Row -->
-
-
-    <hr>
-
-
-    <!-- Resume Row -->
-    <div class="w3-row mb-4">
-      <!-- Row Title -->
-      <div class="w3-third content-header pb-2">
-        <em>Resume</em>
-      </div>
-      <!-- Row Content -->
-      <div class="w3-twothird w3-container">
-        <p>
-          <a href="data/resume.pdf">
-            Resume
-          </a>
-        </p>
-      </div>
-    </div>
-    <!-- End of Resume Row -->
-
-
   </div>
   <!-- End of Content -->
 </section>
