--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,26 +1,24 @@
-<section class="w3-container w3-margin-bottom" id="notes">
- 
- 
+<section class="w3-margin-bottom" id="notes">
+
+
   <!-- Section Title Row -->
-  <div class="w3-container section-header">
+  <div class="pl-5 section-header">
     <h2 class="section-h2">
       <p>Notes</p>
     </h2>
     <a href="#nav" class="top-link"> Back to top </a>
   </div>
-  
-  
-  <hr>
 
-
+  
   <!-- Content -->
-  <div class="w3-container">
-    <!-- Notes Row -->
-    <div class="w3-row">
-      <!-- Row Content -->
-      <div class="w3-col w3-container" style="width:100%">
-        Under construction. Updates on the way.
-        <!-- Limit the number of post here to 5 
+  <div class="pl-3 pt-4">
+    <div class="w3-container">
+      <!-- Notes Row -->
+      <div class="w3-row">
+        <!-- Row Content -->
+        <div class="w3-col w3-container" style="width:100%">
+          Under construction. Updates on the way.
+          <!-- Limit the number of post here to 5 
         <ol class="entry-previews">          
           {% for post in site.posts limit:5 %}
           <li>
@@ -38,9 +36,9 @@
           {% endfor %}
         </ol>
         -->
+        </div>
       </div>
-    </div>    
+    </div>
   </div>
 
-  
 </section>
