--- a/css/main.css
+++ b/css/main.css
@@ -142,10 +142,10 @@ header a {
 
 /* Section Styling */
 section {
-    margin-top: .4em;
+    margin-top: .2em;
     margin-bottom: 4em;
-    padding-bottom: 1em;
-    padding-top: 1em !important;    
+    padding-bottom: .5em;
+    padding-top: .5em !important;    
     
     height: auto;
     min-height: 35em;
@@ -163,6 +163,9 @@ section {
   justify-content: flex-start;
   align-items: center;
   padding-left: 1.8em;
+  padding-top: .5em;
+  padding-bottom: .7em;
+  border-bottom: 1px solid #EEEEEE;
 }
 
 .section-h2 {
@@ -179,6 +182,7 @@ section {
     font-size:.9em;
     width: 100%;
     text-align:right;
+    padding-right: 2em;
 }
 
 .slide {
