update font and html head

--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -2,7 +2,7 @@
 
 
   <!-- Section Title Row -->
-  <div class="pl-5 section-header">
+  <div class="section-header">
     <h2 class="section-h2">
       <p>About</p>
     </h2>
@@ -26,14 +26,14 @@
             <br>
             I enjoy <span class="underline">codin</span>g, tinkering with
             <span class="underline">machine learnin</span>g models,
-            and pretending to be a <span class="underline">musician</span>.
-            <br>
-            <br>
-            I'm always looking for new things to learn.
-            My curiosity hasn't hurt me yet.
-            <br>
-            <br>
-            Friend me on chess.com (JonWot)
+            and pretending to be a <span class="underline">musician</span>.          
+          </p>
+          <p>
+              I'm always looking for new things to learn.
+              My curiosity hasn't hurt me yet.
+          </p>
+          <p>
+              Friend me on chess.com (JonWot)
           </p>
         </div>
       </div>
