--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -2,7 +2,7 @@
     
 
   <!-- Section Title Row -->
-  <div class="pl-5 section-header">
+  <div class="section-header">
     <h2 class="section-h2">
       <p>Projects</p>
     </h2>
