--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,5 +1,5 @@
 <!-- Top Nav Block -->
-<nav class="w3-container navbar navbar-toggleable-md bg-faded" id="nav">
+<nav class="navbar navbar-toggleable-md bg-faded" id="nav">
   <button class="navbar-toggler navbar-light navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
