--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,7 @@ body {
     margin: 0 auto;
     
     font-size: 1.1em;
-    font-family: "Avenir", "Arial", sans-serif;
-    color: var(--black);
+    font-family: "Roboto", "Arial", sans-serif;
     line-height: 1.5;
 
     background-color: var(--bg);
@@ -162,7 +161,7 @@ section {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  padding-left: 1.8em;
+  padding-left: 2.8em;
   padding-top: .5em;
   padding-bottom: .7em;
   border-bottom: 1px solid #EEEEEE;
@@ -196,11 +195,11 @@ section {
 .underline {
     background-image: linear-gradient(var(--main-color) 0%, var(--main-color) 100%);
     background-repeat: repeat-x;
-    background-position: 0 1.1em;
-    background-size: 1px 3px;
-    -webkit-background-size: 1px 3px;
-    -moz-background-size: 1px 3px;
-    -o-background-size: 1px 3px;
+    background-position: 0em 1em;
+    background-size: 1em 3em;
+    -webkit-background-size: 1em 3em;
+    -moz-background-size: 1em 3em;
+    -o-background-size: 1em 3em;
 }
 
 blockquote {
