--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,24 +1,21 @@
 <!-- Top Nav Block -->
-<nav class="navbar navbar-toggleable-md bg-faded" id="nav">
-  <button class="navbar-toggler navbar-light navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-sm mt-3" id="nav">
+  <a class="navbar-brand" href="{{site.url}}">Jonathan Tow</a>
+  <button class="navbar-toggler navbar-light navbar-toggler-right mr-2" type="button" data-toggle="collapse"
+    data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-
-  <a class="navbar-brand" href="{{site.url}}">Jonathan Tow</a>
-
 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto pr-2">
       <li class="nav-item">
-        <a class="nav-link" href="{{site.url}}#about">About </a>
+        <a class="nav-link" href="{{site.url}}#about">ABOUT </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{site.url}}#project">Projects</a>
+        <a class="nav-link" href="{{site.url}}#project">PROJECTS</a>
       </li>
       <li class="nav-item"></li>
-      <a class="nav-link" href="{{site.url}}#notes">Notes</a>
+      <a class="nav-link" href="{{site.url}}#notes">NOTES</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/jon-tow">
