--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,5 +1,4 @@
-<section class="w3-margin-bottom" id="notes">
-
+<section class="" id="notes">
 
   <!-- Section Title Row -->
   <div class="section-header">
