--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -1,10 +1,6 @@
 <!-- Footer -->
-<footer class="w3-row-padding nav-row">
-  <div class="w3-container w3-text-grey w3-margin-bottom">
-    <div id="footer" class="container-fluid">
-      New York, New York
-      <br> ©2018 Jon Tow
-    </div>
+<footer class="">
+  <div id="footer" class="">
+    <br> ©2019 Jon Tow
   </div>
-  <!-- End Footer area -->
 </footer>
