--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,82 +1,89 @@
-<section class="w3-margin-bottom" id="about">
-
+<section class="mt-3" id="about">
 
   <!-- Section Title Row -->
   <div class="section-header">
-    <h2 class="section-h2">
-      <p>About</p>
-    </h2>
+
   </div>
 
-
   <!-- Content -->
-  <div class="pl-3 pt-4">
-    <div class="w3-container">
-      <!-- Bio Row -->
-      <div class="w3-row">
-        <!-- Row Title -->
-        <div class="w3-third content-header pb-2">
-          <em>Bio</em>
-        </div>
-        <!-- Row Content -->
-        <div class="w3-twothird w3-container">
-          <p>
-            <b>CS @ Stony Brook University</b>
-            <br>
-            <br>
-            I enjoy <span class="underline">codin</span>g, tinkering with
-            <span class="underline">machine learnin</span>g models,
-            and pretending to be a <span class="underline">musician</span>.          
-          </p>
-          <p>
-              I'm always looking for new things to learn.
-              My curiosity hasn't hurt me yet.
-          </p>
-          <p>
-              Friend me on chess.com (JonWot)
-          </p>
-        </div>
+  <div class="section-content">
+   
+    <!-- Bio Row -->
+    <div class="tab-content">
+      <div class="tab-title">  
+
+          <svg height="200" viewBox="0 0 64 210"  preserveAspectRatio="xMinYMin meet"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
+            <desc>Created with Sketch.</desc>
+            <defs></defs>
+            <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="18" font-family="Helvetica" font-weight="normal">
+                <g id="Desktop" transform="translate(-43.000000, -383.000000)" fill="#464646">
+                    <g id="header" transform="translate(0.000000, -1.000000)">
+                        <text id="JONATHAN-TOW-New-Yor" transform="translate(63.500000, 476.274015) rotate(-90.000000) translate(-63.500000, -476.274015) ">
+                            <tspan x="-53" y="470">JONATHAN TOW</tspan>
+                            <tspan x="-53" y="497">New York, New York, USA</tspan>
+                        </text>
+                    </g>
+                </g>
+            </g>
+        </svg>
+
       </div>
-      <!-- End of Bio Row -->
-
-
-      <hr>
-
-
-      <!-- Email Row -->
-      <div class="w3-row">
-        <!-- Row Title -->
-        <div class="w3-third content-header">
-          <em>Email</em>
-        </div>
-        <!-- Row Content -->
-        <div class="w3-twothird w3-container">
-          <p>jonathantow1 @ gmail.com</p>
-        </div>
+      <div class="tab-info">
+        <p>
+          <b>CS @ Stony Brook University</b>
+          <br>
+          <br>
+          I enjoy <span class="underline">codin</span>g, tinkering with
+          <span class="underline">machine learnin</span>g models,
+          and pretending to be a <span class="underline">musician</span>.
+        </p>
+        <p>
+          I'm always looking for new things to learn.
+          My curiosity hasn't hurt me yet.
+        </p>
+        <p>
+          Friend me on chess.com (JonWot)
+        </p>
       </div>
-      <!-- End of Email Row -->
-
-
-      <hr>
-
-
-      <!-- Resume Row -->
-      <div class="w3-row mb-4">
-        <!-- Row Title -->
-        <div class="w3-third content-header">
-          <em>Resume</em>
-        </div>
-        <!-- Row Content -->
-        <div class="w3-twothird w3-container">
-          <p>
-            <a href="data/resume.pdf">
-              Resume
-            </a>
-          </p>
-        </div>
-      </div>
-      <!-- End of Resume Row -->
     </div>
+    <!-- End of Bio Row -->
+
+    <hr>
+
+    <!-- Email Row -->
+    <div class="tab-content">
+        <!-- Row Title -->
+      <div class="tab-title">
+          <em>Email</em>
+      </div>
+      <!-- Row Content -->
+      <div class="tab-info pt-3">
+          <p>jonathantow1 @ gmail.com</p>
+      </div>
+    </div>
+    <!-- End of Email Row -->
+
+
+    <hr>
+
+
+    <!-- Resume Row -->
+    <div class="tab-content">
+        <!-- Row Title -->
+        <div class="tab-title">
+            <em>Resume</em>
+      </div>
+      <!-- Row Content -->
+      <div class="tab-info pt-3">
+          <p>
+          <a href="data/resume.pdf">
+            Resume
+          </a>
+        </p>
+      </div>
+    </div>
+    <!-- End of Resume Row -->
   </div>
   <!-- End of Content -->
 </section>
