--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,26 +1,23 @@
-<section class="w3-margin-bottom" id="project">
-    
 
-  <!-- Section Title Row -->
-  <div class="section-header">
-    <h2 class="section-h2">
-      <p>Projects</p>
-    </h2>
-    <a href="#nav" class="top-link"> Back to top </a>
+<section class="" style="background-color: #EFF0FE;" id="project">  
+    <!-- Section Title Row -->
+  <div class="section-header pt-2 pb-2"> 
+      <h2 class="section-h2">
+          <p>Projects</p>
+        </h2>
   </div>
-  
     
+
+  <div class="section-content" style="">      
+  
   <!-- Content -->
-  <div class="pl-3 pt-4">
-  <div class="w3-container">
-
-
     <!-- Playground -->
-    <div class="content-header">
-      <h4>Playground</h4>
+    <div class="mb-2">  
+      <h3>Playground</h3>
     </div>
+
     <!-- Note Projects Row -->
-    <div class="project-row row">
+    <div class="project-row row pl-0">
       <!-- Column Content -->
       <div class="project-item col-sm">
         <h4>
@@ -48,8 +45,10 @@
       </div>
       <!-- End of Projects Row -->
     </div>
+
+
     <!-- Note Projects Row -->
-    <div class="project-row row">
+    <div class="project-row row pl-0">
       <!-- Column Content -->
       <div class="project-item col-sm">
         <h4>
@@ -73,7 +72,9 @@
       <!-- End of Projects Row -->
     </div>
   </div>
+  </div>
   <!-- End of Content -->
 <div>
+  </div>
 
 </section>
