--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,6 +1,6 @@
 <!-- Top Nav Block -->
 <nav class="navbar navbar-expand-sm mt-3" id="nav">
-  <a class="navbar-brand" href="{{site.url}}">Jonathan Tow</a>
+  <a class="navbar-brand" href="{{site.url}}">JONATHAN TOW</a>
   <button class="navbar-toggler navbar-light navbar-toggler-right mr-2" type="button" data-toggle="collapse"
     data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
