--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+  {% include _base/head.html %} 
+</head>
 <body class="" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
     <main class="w3-content w3-margin-top" style="max-width:1400px;">
         <div class="w3-row-padding">
-            {% include _base/head.html %} 
             {% include _base/nav.html %} 
             {{ content }} 
             {% include _base/footer.html %}
