--- a/css/main.css
+++ b/css/main.css
@@ -232,7 +232,7 @@ blockquote {
   grid-area: tab-name;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  padding-top: 1em;
 }
 
 .tab-info { 
