last try with svg

--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -7,25 +7,28 @@
 
   <!-- Content -->
   <div class="section-content">
-   
+
     <!-- Bio Row -->
     <div class="tab-content">
-      <div class="tab-title">  
+      <div class="tab-title">
 
-          <svg height="200" viewBox="0 0 64 210"  preserveAspectRatio="xMinYMin meet" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
-            <desc>Created with Sketch.</desc>
-            <defs></defs>
-            <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="18" font-family="Helvetica" font-weight="normal">
-                <g id="Desktop" transform="translate(-43.000000, -383.000000)" fill="#464646">
-                    <g id="header" transform="translate(0.000000, -1.000000)">
-                        <text id="JONATHAN-TOW-New-Yor" transform="translate(63.500000, 476.274015) rotate(-90.000000) translate(-63.500000, -476.274015) ">
-                            <tspan x="-53" y="470">JONATHAN TOW</tspan>
-                            <tspan x="-53" y="497">New York, New York, USA</tspan>
-                        </text>
-                    </g>
-                </g>
+        <svg height="200" viewBox="0 0 42 210" preserveAspectRatio="xMinYMin meet" version="1.1"
+          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
+          <desc>Created with Sketch.</desc>
+          <defs></defs>
+          <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="18"
+            font-family="Helvetica" font-weight="normal">
+            <g id="Desktop" transform="translate(-43.000000, -383.000000)" fill="#464646">
+              <g id="header" transform="translate(0.000000, -1.000000)">
+                <text id="JONATHAN-TOW-New-Yor"
+                  transform="translate(63.500000, 476.274015) rotate(-90.000000) translate(-63.500000, -476.274015) ">
+                  <tspan x="-53" y="470">JONATHAN TOW</tspan>
+                  <tspan x="-53" y="497">New York, New York, USA</tspan>
+                </text>
+              </g>
             </g>
+          </g>
         </svg>
       </div>
       <div class="tab-info">
@@ -52,13 +55,13 @@
 
     <!-- Email Row -->
     <div class="tab-content">
-        <!-- Row Title -->
+      <!-- Row Title -->
       <div class="tab-title">
-          <em>Email</em>
+        <em>Email</em>
       </div>
       <!-- Row Content -->
       <div class="tab-info pt-3">
-          <p>jonathantow1 @ gmail.com</p>
+        <p>jonathantow1 @ gmail.com</p>
       </div>
     </div>
     <!-- End of Email Row -->
@@ -69,13 +72,13 @@
 
     <!-- Resume Row -->
     <div class="tab-content">
-        <!-- Row Title -->
-        <div class="tab-title">
-            <em>Resume</em>
+      <!-- Row Title -->
+      <div class="tab-title">
+        <em>Resume</em>
       </div>
       <!-- Row Content -->
       <div class="tab-info pt-3">
-          <p>
+        <p>
           <a href="data/resume.pdf">
             Resume
           </a>
