--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,26 +1,22 @@
-<section class="" id="about">
-
+<div class="mt-3 mb-3" id="about">
   <!-- Section Title Row -->
-  <div class="section-header">
-
-  </div>
+  <div class="section-header pt-2 pb-2">
+      <h2 class="section-h2">
+        <p>About</p>
+      </h2>
+    </div>
+  
 
   <!-- Content -->
-  <div class="section-content">
+  <div class="section-content mb-4 pb-4 ">
 
-    <!-- Bio Row -->
-    <div class="tab-content">
-      <div class="tab-title">
-        <em>Bio </em>
-      </div>
-      <div class="tab-info">
-        <p>
+      <p>
           <b>CS @ Stony Brook University</b>
           <br>
           <br>
-          I enjoy <span class="underline">codin</span>g, tinkering with
-          <span class="underline">machine learnin</span>g models,
-          and pretending to be a <span class="underline">musician</span>.
+          I enjoy coding, tinkering with
+          machine learning models,
+          and pretending to be a musician.
         </p>
         <p>
           I'm always looking for new things to learn.
@@ -29,44 +25,9 @@
         <p>
           Friend me on chess.com (JonWot)
         </p>
-      </div>
-    </div>
     <!-- End of Bio Row -->
 
-    <hr>
 
-    <!-- Email Row -->
-    <div class="tab-content">
-      <!-- Row Title -->
-      <div class="tab-title">
-        <em>Email</em>
-      </div>
-      <!-- Row Content -->
-      <div class="tab-info pt-3">
-        <p>jonathantow1 @ gmail.com</p>
-      </div>
-    </div>
-    <!-- End of Email Row -->
-
-
-    <hr>
-
-
-    <!-- Resume Row -->
-    <div class="tab-content">
-      <!-- Row Title -->
-      <div class="tab-title">
-        <em>Resume</em>
-      </div>
-      <!-- Row Content -->
-      <div class="tab-info pt-3">
-        <p>
-          <a href="data/resume.pdf">
-            Resume
-          </a>
-        </p>
-      </div>
-    </div>
     <!-- End of Resume Row -->
   </div>
   <!-- End of Content -->
