--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,8 +4,8 @@
   {% include _base/head.html %} 
 </head>
 <body class="" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-    <main class="w3-content w3-margin-top" style="max-width:1400px;">
-        <div class="w3-row-padding">
+    <main class="" style="max-width:1400px;">
+        <div class="">
             {% include _base/nav.html %} 
             {{ content }} 
             {% include _base/footer.html %}
