--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,6 +1,6 @@
 <!-- Top Nav Block -->
-<nav class="navbar navbar-expand-sm mt-3" id="nav">
-  <a class="navbar-brand" href="{{site.url}}">JONATHAN TOW</a>
+<nav class="navbar navbar-expand-sm pt-3" id="nav">
+  <a class="navbar-brand" href="{{site.url}}">Jonathan Tow</a>
   <button class="navbar-toggler navbar-light navbar-toggler-right mr-2" type="button" data-toggle="collapse"
     data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,13 +9,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto pr-2">
       <li class="nav-item">
-        <a class="nav-link" href="{{site.url}}#about">ABOUT </a>
+        <a class="nav-link" href="{{site.url}}#about">About </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{site.url}}#project">PROJECTS</a>
+        <a class="nav-link" href="{{site.url}}#project">Projects</a>
       </li>
       <li class="nav-item"></li>
-      <a class="nav-link" href="{{site.url}}#notes">NOTES</a>
+      <a class="nav-link" href="{{site.url}}#notes">Notes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/jon-tow">
