--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,7 +1,22 @@
-<section class="" id="notes">
+<section class="" >
+
+
+    <svg  viewBox="0 0 766 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
+      <desc>Created with Sketch.</desc>
+      <defs></defs>
+      <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="Desktop-HD" transform="translate(-335.000000, -383.000000)" fill="#F4F4FA">
+              <g id="Group" transform="translate(335.000000, 243.000000)">
+                  <path d="M0,140 C0,140 216.881703,146.372549 470,162.712418 C723.118297,179.052288 766,190 766,190 L766,140 L0,140 Z" id="Rectangle-2" transform="translate(383.000000, 165.000000) scale(-1, 1) translate(-383.000000, -165.000000) "></path>
+              </g>
+          </g>
+      </g>
+  </svg>
+
 
   <!-- Section Title Row -->
-  <div class="section-header">
+  <div class="section-header pt-1" id="notes">
     <h2 class="section-h2">
       <p>Notes</p>
     </h2>
@@ -10,15 +25,10 @@
 
   
   <!-- Content -->
-  <div class="pl-3 pt-4">
-    <div class="w3-container">
+  <div class="section-content" style="">
       <!-- Notes Row -->
-      <div class="w3-row">
         <!-- Row Content -->
-        <div class="w3-col w3-container" style="width:100%">
-          Under construction. Updates on the way.
-          <!-- Limit the number of post here to 5 
-        <ol class="entry-previews">          
+        <ul class="entry-previews">          
           {% for post in site.posts limit:5 %}
           <li>
             <p class="post-preview">
@@ -33,11 +43,7 @@
             </p>
           </li>
           {% endfor %}
-        </ol>
-        -->
-        </div>
-      </div>
-    </div>
+        </ul>
   </div>
 
 </section>
