--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,9 +1,28 @@
-<section class="" style="background-color: #EFF0FE;" id="project">
-  <!-- Section Title Row -->
-  <div class="section-header pt-2 pb-2">
+
+
+<section class="" style="background-color:rgb(244, 244, 251);" >
+
+
+<svg viewBox="0 0 766 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
+  <desc>Created with Sketch.</desc>
+  <defs></defs>
+  <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+      <g id="Desktop-HD" transform="translate(-335.000000, -243.000000)" fill="#FCFCFC">
+          <g id="Group" transform="translate(335.000000, 243.000000)">
+              <path d="M0,0 C0,0 216.881703,6.37254902 470,22.7124183 C723.118297,39.0522876 766,50 766,50 L766,0 L0,0 Z" id="Rectangle-2" transform="translate(383.000000, 25.000000) scale(-1, 1) translate(-383.000000, -25.000000) "></path>
+          </g>
+      </g>
+  </g>
+</svg>
+
+
+ <!-- Section Title Row -->
+  <div class="section-header pt-2 pb-2" id="project" >
     <h2 class="section-h2">
       <p>Projects</p>
     </h2>
+    <a href="#nav" class="top-link"> Back to top </a>
   </div>
 
 
@@ -16,7 +35,7 @@
     <!-- Note Projects Row -->
     <div class="project-row row pl-0">
       <!-- Column Content -->
-      <div class="project-item col-sm">
+      <div class="project-item  col-sm">
         <h4>
           <a href="projects/impossible-tic-tac-toe/index.html">
             Impossible Tic-Tac-Toe
@@ -62,15 +81,21 @@
       <!-- Column Content -->
       <div class="project-item col-sm">
         <h4>
+            <a href="projects/sudoku-solver/index.html">
+              Lispp
+            </a>
         </h4>
         <p>
+          A small LISP interpreter built 
+          with modern C++.
+       <br>
+            <a href="https://github.com/jon-tow/sudoku-solver">github</a>.
+
         </p>
       </div>
       <!-- End of Projects Row -->
     </div>
   </div>
   <!-- End of Content -->
-  <div>
-  </div>
 
 </section>
