--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
     --light-black: rgb(75, 75, 75);
     --bg: #F2F6F9; 
   /* Global Styles */
-    --box-shadow: rgba(0, 0, 0, 0) 1px 3px 8px;
+    --box-shadow: rgba(0, 0, 0, 0) 1px 0px 8px;
     --inner-left-align: .9em;
 }
 
@@ -122,6 +122,7 @@ header a {
 .navbar {
     width: 100%;
     padding: 0.5em 0 0.5em 1.75em;        
+
 }
 
 .navbar-nav {
@@ -150,13 +151,11 @@ header a {
 section {
   display: flex;
   flex-direction: column;
-  margin: 0em .5em .5em .5em;
-  padding-bottom: .5em;
     
   height: auto;
   min-height: 32em;
-
-  background-color: var(--main-white);
+  
+  /*border: 1px solid #EEEEEE;*/
   color: var(--black);
   box-shadow: var(--box-shadow);
 }
@@ -232,7 +231,7 @@ blockquote {
   grid-area: tab-name;
   display: flex;
   flex-direction: row;
-  padding-top: 1em;
+  align-items: flex-start;
 }
 
 .tab-info { 
@@ -268,6 +267,7 @@ footer {
 /* Links */
 a {
     font-weight:500;
+
     color: var(--main-color);
 }
 a:hover {
