fix aspect ratio

--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,4 +1,4 @@
-<div class="mt-3 mb-3" id="about">
+<div class="mt-3 pb-3" id="about">
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
       <h2 class="section-h2">
