--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -3,7 +3,7 @@
 <section class="" style="background-color:rgb(244, 244, 251);" >
 
 
-<svg viewBox="0 0 766 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg  preserveAspectRatio="xMinYMin meet"  x="0"   y="0" viewBox="0 0 766 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
   <desc>Created with Sketch.</desc>
   <defs></defs>
