update links and style

--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -1,6 +1,4 @@
 <!-- Footer -->
 <footer class="">
-  <div id="footer" class="">
-    <br> ©2019 Jon Tow
-  </div>
+    <p>©2019 Jon Tow</p>
 </footer>
