--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,24 +1,25 @@
+<section class="" style="background-color:rgb(244, 244, 251);">
 
 
-<section class="" style="background-color:rgb(244, 244, 251);" >
-
-
-<svg  preserveAspectRatio="xMinYMin meet"  x="0"   y="0" viewBox="0 0 766 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-  <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
-  <desc>Created with Sketch.</desc>
-  <defs></defs>
-  <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+  <svg preserveAspectRatio="xMinYMin meet" x="0" y="0" viewBox="0 0 766 50" version="1.1"
+    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
+    <desc>Created with Sketch.</desc>
+    <defs></defs>
+    <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
       <g id="Desktop-HD" transform="translate(-335.000000, -243.000000)" fill="#FCFCFC">
-          <g id="Group" transform="translate(335.000000, 243.000000)">
-              <path d="M0,0 C0,0 216.881703,6.37254902 470,22.7124183 C723.118297,39.0522876 766,50 766,50 L766,0 L0,0 Z" id="Rectangle-2" transform="translate(383.000000, 25.000000) scale(-1, 1) translate(-383.000000, -25.000000) "></path>
-          </g>
+        <g id="Group" transform="translate(335.000000, 243.000000)">
+          <path d="M0,0 C0,0 216.881703,6.37254902 470,22.7124183 C723.118297,39.0522876 766,50 766,50 L766,0 L0,0 Z"
+            id="Rectangle-2"
+            transform="translate(383.000000, 25.000000) scale(-1, 1) translate(-383.000000, -25.000000) "></path>
+        </g>
       </g>
-  </g>
-</svg>
+    </g>
+  </svg>
 
 
- <!-- Section Title Row -->
-  <div class="section-header pt-2 pb-2" id="project" >
+  <!-- Section Title Row -->
+  <div class="section-header pt-2 pb-2" id="project">
     <h2 class="section-h2">
       <p>Projects</p>
     </h2>
@@ -48,17 +49,20 @@
         </p>
       </div>
       <!-- Column Content -->
-      <div class="project-item col-sm">
-        <h4>
-          <a href="projects/maze-solver/index.html">
-            Maze Solver
-          </a>
-        </h4>
-        <p>
-          A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
-          <a href="https://github.com/jon-tow/maze-solver">github</a>.
-        </p>
-      </div>
+
+        <div class="project-item col-sm">
+            <h4>
+              <a href="https://github.com/jon-tow/lispp">
+                Lispp
+              </a>
+            </h4>
+            <p>
+              A little LISP interpreter built
+              with Modern C++.
+              <br>
+              <a href="https://github.com/jon-tow/lispp">github</a>.
+            </p>
+          </div>
       <!-- End of Projects Row -->
     </div>
 
@@ -67,33 +71,31 @@
     <div class="project-row row pl-0">
       <!-- Column Content -->
       <div class="project-item col-sm">
-        <h4>
-          <a href="projects/sudoku-solver/index.html">
-            Sudoku Solver
-          </a>
-        </h4>
-        <p>
-          A sudoku solver implemented with backtracking.
-          <br />
-          <a href="https://github.com/jon-tow/sudoku-solver">github</a>.
-        </p>
-      </div>
-      <!-- Column Content -->
-      <div class="project-item col-sm">
-        <h4>
+          <h4>
             <a href="projects/sudoku-solver/index.html">
-              Lispp
+              Sudoku Solver
             </a>
-        </h4>
-        <p>
-          A small LISP interpreter built 
-          with modern C++.
-       <br>
+          </h4>
+          <p>
+            A sudoku solver implemented with backtracking.
+            <br />
             <a href="https://github.com/jon-tow/sudoku-solver">github</a>.
-
-        </p>
-      </div>
+          </p>
+        </div>
       <!-- End of Projects Row -->
+            <!-- Column Content -->
+
+              <div class="project-item col-sm">
+                  <h4>
+                    <a href="projects/maze-solver/index.html">
+                      Maze Solver
+                    </a>
+                  </h4>
+                  <p>
+                    A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
+                    <a href="https://github.com/jon-tow/maze-solver">github</a>.
+                  </p>
+                </div>
     </div>
   </div>
   <!-- End of Content -->
