--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ header a {
 .navbar {
     width: 100%;
     padding: 0.5em 0 0.5em 1.75em;        
-
+    
 }
 
 .navbar-nav {
@@ -256,10 +256,11 @@ blockquote {
 footer {
   color: var(--black);
   display: flex;
-  flex-direction: row;
-  margin: 0em .5em 1em 2em;
+  flex-direction: column;
+  justify-content: center;  
   font-size: 1em;
   font-weight: 300;
+padding-left: 2.5em;
 }
 /*------------*/
 
