add resume/email and styling updates

--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,22 +1,7 @@
-<section class="" >
-
-
-    <svg  viewBox="0 0 766 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-      <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
-      <desc>Created with Sketch.</desc>
-      <defs></defs>
-      <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-          <g id="Desktop-HD" transform="translate(-335.000000, -383.000000)" fill="#F4F4FA">
-              <g id="Group" transform="translate(335.000000, 243.000000)">
-                  <path d="M0,140 C0,140 216.881703,146.372549 470,162.712418 C723.118297,179.052288 766,190 766,190 L766,140 L0,140 Z" id="Rectangle-2" transform="translate(383.000000, 165.000000) scale(-1, 1) translate(-383.000000, -165.000000) "></path>
-              </g>
-          </g>
-      </g>
-  </svg>
-
+<section class="pt-3 " >
 
   <!-- Section Title Row -->
-  <div class="section-header pt-2" id="notes">
+  <div class="section-header pt-2 pb-3" id="notes">
     <h2 class="section-h2">
       <p>Notes</p>
     </h2>
@@ -26,8 +11,9 @@
   
   <!-- Content -->
   <div class="section-content" style="">
-      <!-- Notes Row -->
-        <!-- Row Content -->
+    Notes are under construction.
+      <!-- Notes Row 
+        
         <ul class="entry-previews">          
           {% for post in site.posts limit:5 %}
           <li>
@@ -44,6 +30,7 @@
           </li>
           {% endfor %}
         </ul>
+      -->
   </div>
 
 </section>
