--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,22 +1,4 @@
-<section class="" style="background-color:rgb(244, 244, 251);">
-
-
-  <svg preserveAspectRatio="xMinYMin meet" x="0" y="0" viewBox="0 0 766 50" version="1.1"
-    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
-    <desc>Created with Sketch.</desc>
-    <defs></defs>
-    <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-      <g id="Desktop-HD" transform="translate(-335.000000, -243.000000)" fill="#FCFCFC">
-        <g id="Group" transform="translate(335.000000, 243.000000)">
-          <path d="M0,0 C0,0 216.881703,6.37254902 470,22.7124183 C723.118297,39.0522876 766,50 766,50 L766,0 L0,0 Z"
-            id="Rectangle-2"
-            transform="translate(383.000000, 25.000000) scale(-1, 1) translate(-383.000000, -25.000000) "></path>
-        </g>
-      </g>
-    </g>
-  </svg>
-
+<section class="pt-3 pb-3" style="background-color:rgb(244, 244, 251);">
 
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2" id="project">
@@ -26,13 +8,10 @@
     <a href="#nav" class="top-link"> Back to top </a>
   </div>
 
-
-  <div class="section-content" style="">
-
+  <div class="section-content pb-3" style="">
     <div class="mb-2">
       <h3>Playground</h3>
     </div>
-
     <!-- Note Projects Row -->
     <div class="project-row row pl-0">
       <!-- Column Content -->
@@ -49,20 +28,19 @@
         </p>
       </div>
       <!-- Column Content -->
-
-        <div class="project-item col-sm">
-            <h4>
-              <a href="https://github.com/jon-tow/lispp">
-                Lispp
-              </a>
-            </h4>
-            <p>
-              A little LISP interpreter built
-              with Modern C++.
-              <br>
-              <a href="https://github.com/jon-tow/lispp">github</a>.
-            </p>
-          </div>
+      <div class="project-item col-sm">
+        <h4>
+          <a href="https://github.com/jon-tow/lispp">
+            Lispp
+          </a>
+        </h4>
+        <p>
+          A little LISP interpreter built
+          with Modern C++.
+          <br>
+          <a href="https://github.com/jon-tow/lispp">github</a>.
+        </p>
+      </div>
       <!-- End of Projects Row -->
     </div>
 
@@ -71,33 +49,30 @@
     <div class="project-row row pl-0">
       <!-- Column Content -->
       <div class="project-item col-sm">
-          <h4>
-            <a href="projects/sudoku-solver/index.html">
-              Sudoku Solver
-            </a>
-          </h4>
-          <p>
-            A sudoku solver implemented with backtracking.
-            <br />
-            <a href="https://github.com/jon-tow/sudoku-solver">github</a>.
-          </p>
-        </div>
-      <!-- End of Projects Row -->
-            <!-- Column Content -->
-
-              <div class="project-item col-sm">
-                  <h4>
-                    <a href="projects/maze-solver/index.html">
-                      Maze Solver
-                    </a>
-                  </h4>
-                  <p>
-                    A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
-                    <a href="https://github.com/jon-tow/maze-solver">github</a>.
-                  </p>
-                </div>
+        <h4>
+          <a href="projects/maze-solver/index.html">
+            Maze Solver
+          </a>
+        </h4>
+        <p>
+          A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
+          <a href="https://github.com/jon-tow/maze-solver">github</a>.
+        </p>
+      </div>
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/sudoku-solver/index.html">
+            Sudoku Solver
+          </a>
+        </h4>
+        <p>
+          A sudoku solver implemented with backtracking.
+          <br />
+          <a href="https://github.com/jon-tow/sudoku-solver">github</a>.
+        </p>
+      </div>
+      <!-- End of Projects Row -->      
     </div>
   </div>
   <!-- End of Content -->
-
 </section>
