--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -19,12 +19,12 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/jon-tow">
-          <i class="fa fa-github fa-lg"></i>
+          <i class="fab fa-github fa-lg"></i>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://twitter.com/jonbtow">
-          <i class="fa fa-twitter fa-lg"></i>
+          <i class="fab fa-twitter fa-lg"></i>
         </a>
       </li>
     </ul>
