--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,33 +1,54 @@
-<div class="mt-3 pb-3" id="about">
+<section class="pt-3" id="about">
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
-      <h2 class="section-h2">
-        <p>About</p>
-      </h2>
-    </div>
-  
+    <h2 class="section-h2">
+      <p>About</p>
+    </h2>
+  </div>
+
 
   <!-- Content -->
-  <div class="section-content mb-4 pb-4 ">
+  <div class="section-content ">
+    <!-- Bio Row -->
+    <p>
+      <a href="#about">
+        <i class="fas fa-running fa-lg"></i>
+      </a>
+      <b>CS @ Stony Brook University</b>
+      <br>
+      <br>
+      I enjoy coding, tinkering with
+      machine learning models,
+      and pretending to be a musician.
+    </p>
+    <p>
+      I'm always looking for new things to learn.
+      My curiosity hasn't hurt me yet.
+    </p>
+    <p>
 
-      <p>
-          <b>CS @ Stony Brook University</b>
-          <br>
-          <br>
-          I enjoy coding, tinkering with
-          machine learning models,
-          and pretending to be a musician.
-        </p>
-        <p>
-          I'm always looking for new things to learn.
-          My curiosity hasn't hurt me yet.
-        </p>
-        <p>
-          Friend me on chess.com (JonWot)
-        </p>
+    </p>
     <!-- End of Bio Row -->
 
+    <!-- Resume -->
+    <p>
 
+      <a href="../../data/resume.pdf">
+
+        <i class="fas fa-file-alt fa-md"></i>
+        <span class="pb-2 pl-1">Resume</span>
+      </a>
+
+    </p>
+    <!-- End of Resume Row -->
+
+    <!-- Resume -->
+    <p>
+      <a href="jonathantow1@gmail.com">
+        <i class="fas fa-envelope fa-sm"></i>
+        <span class="pl-1">jonathantow1 @ gmail.com</span>
+      </a>
+    </p>
     <!-- End of Resume Row -->
   </div>
   <!-- End of Content -->
