set section heights

--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,7 +1,7 @@
-<section class="pt-3 pb-3" style="background-color:rgb(244, 244, 251);">
+<section class="pt-3 pb-3" style="background-color:rgb(244, 244, 251);" id="project">
 
   <!-- Section Title Row -->
-  <div class="section-header pt-2 pb-2" id="project">
+  <div class="section-header pt-2 pb-2" >
     <h2 class="section-h2">
       <p>Projects</p>
     </h2>
@@ -15,7 +15,7 @@
     <!-- Note Projects Row -->
     <div class="project-row row pl-0">
       <!-- Column Content -->
-      <div class="project-item  col-sm">
+      <div class="project-item col-sm">
         <h4>
           <a href="projects/impossible-tic-tac-toe/index.html">
             Impossible Tic-Tac-Toe
