--- a/css/main.css
+++ b/css/main.css
@@ -153,9 +153,7 @@ section {
   flex-direction: column;
     
   height: auto;
-  min-height: 30em;
- 
-  box-shadow: var(--box-shadow);
+  min-height: 26em;
 }
 
 .section-header {
@@ -216,6 +214,15 @@ blockquote {
 }
 /*-------------*/
 
+#about {
+  
+}
+
+#project {
+  -moz-box-shadow:    inset 0 0 8px rgba(62, 62, 62, 0.105);
+  -webkit-box-shadow: inset 0 0 8px rgba(62, 62, 62, 0.105);
+  box-shadow: inset 0 0 8px rgba(62, 62, 62, 0.105);
+}
 
 /* About Styling */
 .tab-content {
