--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,4 +1,4 @@
-<section class="pt-2" id="about">
+<section class="" id="about">
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
     <h2 class="section-h2">
@@ -31,11 +31,9 @@
     <!-- End of Bio Row -->
 
     <!-- Resume -->
-    <p>
-
+    <p class="d-flex flex-row align-items-center">
       <a href="../../data/resume.pdf">
-
-        <i class="fas fa-file-alt fa-md"></i>
+        <i class="fas fa-file-alt fa-md"></i> 
         <span class="pb-2 pl-1">Resume</span>
       </a>
 
