--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,4 +1,4 @@
-<section class="" id="about">
+<section class="pt-1" id="about">
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
     <h2 class="section-h2">
@@ -31,10 +31,10 @@
     <!-- End of Bio Row -->
 
     <!-- Resume -->
-    <p class="d-flex flex-row align-items-center">
+    <p>
       <a href="../../data/resume.pdf">
         <i class="fas fa-file-alt fa-md"></i> 
-        <span class="pb-2 pl-1">Resume</span>
+        <span class="pb-2 pl-1">resume</span>
       </a>
 
     </p>
@@ -43,7 +43,7 @@
     <!-- Resume -->
     <p>
       <a href="jonathantow1@gmail.com">
-        <i class="fas fa-envelope fa-sm"></i>
+        <i class="fas fa-envelope fa-sm"></i> 
         <span class="pl-1">jonathantow1 @ gmail.com</span>
       </a>
     </p>
