update resume and favicon

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 :root {
   /* Global Colors */
-    --main-color: #154beeba;
+    --main-color: rgba(21, 75, 238, 0.729);
     --main-white: #FCFCFC;    
     --black: #505050;
     --light-black: rgb(75, 75, 75);
