fix footer padding

--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,11 +1,10 @@
-<section class="pt-3 pb-3" style="background-color:rgb(244, 244, 251);" id="project">
+<section class="pt-3 pb-3" id="project">
 
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2" >
     <h2 class="section-h2">
       <p>Projects</p>
     </h2>
-    <a href="#nav" class="top-link"> Back to top </a>
   </div>
 
   <div class="section-content pb-3" style="">
