--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,4 +1,4 @@
-<section class="pt-1" id="about">
+<section class="pt-2 pb-3" id="about">
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
     <h2 class="section-h2">
@@ -44,5 +44,6 @@
     </p>
     <!-- End of Resume Row -->
   </div>
+  
   <!-- End of Content -->
 </section>
