--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,7 +1,21 @@
-<section class="pt-3 pb-3" id="project">
 
+<section class="mt-1 pb-3" id="project">
+
+
+  <svg viewBox="0 0 766 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
+    <desc>Created with Sketch.</desc>
+    <defs></defs>
+    <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g id="Desktop-HD" transform="translate(-365.000000, -251.000000)" fill="#FCFCFC">
+            <g id="Group-2" transform="translate(748.000000, 263.500000) scale(-1, -1) translate(-748.000000, -263.500000) translate(365.000000, 251.000000)">
+                <polygon id="Rectangle-2" transform="translate(383.000000, 12.500000) scale(-1, -1) translate(-383.000000, -12.500000) " points="0 0 766 25 766 0"></polygon>
+            </g>
+        </g>
+    </g>
+</svg>
   <!-- Section Title Row -->
-  <div class="section-header pt-2 pb-2" >
+  <div class="section-header pt-3 pb-2" >
     <h2 class="section-h2">
       <p>Projects</p>
     </h2>
@@ -73,5 +87,6 @@
       <!-- End of Projects Row -->      
     </div>
   </div>
+
   <!-- End of Content -->
 </section>
