add hover text decoration

--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,12 +1,12 @@
 <!-- Top Nav Block -->
 <nav class="navbar navbar-expand-sm mt-2 pt-3" id="nav">
-  <a class="navbar-brand" href="{{site.url}}">Jonathan Tow</a>
+  <a class="navbar-brand pt-2 pb-0" href="{{site.url}}">Jonathan Tow</a>
   <button class="navbar-toggler navbar-light navbar-toggler-right mr-2" type="button" data-toggle="collapse"
     data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse pt-0 pb-0 navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto pr-2">
       <li class="nav-item">
         <a class="nav-link" href="{{site.url}}#about">About </a>
@@ -23,7 +23,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://twitter.com/jonbtow">
+        <a class="pb-0 nav-link" href="https://twitter.com/jonbtow">
           <i class="fab fa-twitter fa-lg"></i>
         </a>
       </li>
