--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,4 +1,4 @@
-<section class="pt-2 pb-3" id="about">
+<section class="pt-1 pb-3" id="about">
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
     <h2 class="section-h2">
@@ -26,9 +26,9 @@
 
     <!-- Resume -->
     <p>
+      <i style="color: var(--main-color)" class="mr-1 fas fa-file-alt fa-md"></i>
       <a href="../../data/resume.pdf">
-        <i class="fas fa-file-alt fa-md"></i> 
-        <span class="pb-2 pl-1">resume</span>
+      <span class="pb-2">resume</span>
       </a>
 
     </p>
@@ -36,13 +36,13 @@
 
     <!-- Resume -->
     <p>
+      <i style="color: var(--main-color)" class="mr-1 fas fa-envelope fa-sm"></i>
       <a href="jonathantow1@gmail.com">
-        <i class="fas fa-envelope fa-sm"></i> 
-        <span class="pl-1">jonathantow1 @ gmail.com</span>
+        <span >jonathantow1 @ gmail.com</span>
       </a>
     </p>
     <!-- End of Resume Row -->
   </div>
-  
+
   <!-- End of Content -->
 </section>
