--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -5,7 +5,9 @@
     <h2 class="section-h2">
       <p>Notes</p>
     </h2>
-    <a href="#nav" class="top-link"> Back to top </a>
+    <div class="top-link">
+      <a href="#nav"> Back to top </a>
+    </div>
   </div>
 
   
